--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -7,14 +7,7 @@ body
   color fontClr
   font font-size 'Poppins', sans-serif
   .content-area-web
-    padding-top 158px
-    background: rgba(237,237,237,1);
-    background: -moz-linear-gradient(top, rgba(237,237,237,1) 0%, rgba(255,255,255,1) 22%, rgba(255,255,255,1) 100%);
-    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(237,237,237,1)), color-stop(22%, rgba(255,255,255,1)), color-stop(100%, rgba(255,255,255,1)));
-    background: -webkit-linear-gradient(top, rgba(237,237,237,1) 0%, rgba(255,255,255,1) 22%, rgba(255,255,255,1) 100%);
-    background: -o-linear-gradient(top, rgba(237,237,237,1) 0%, rgba(255,255,255,1) 22%, rgba(255,255,255,1) 100%);
-    background: -ms-linear-gradient(top, rgba(237,237,237,1) 0%, rgba(255,255,255,1) 22%, rgba(255,255,255,1) 100%);
-    background: linear-gradient(to bottom, rgba(237,237,237,1) 0%, rgba(255,255,255,1) 22%, rgba(255,255,255,1) 100%);
+    background #f5f5f5
 .no-pd-r
   padding-right 0 !important
 .no-pd-l
@@ -418,12 +411,12 @@ md-input-container
       font-size 18px
 #footer-top
   padding 40px 0
-  background-color black
+  background-color #999
   background-size cover
   background-position center
 .bottom-footer
-  border-top 1px solid #999
-  background-color black
+  border-top 1px solid #ccc
+  background-color #999
   padding 30px 0
 footer
   .white
