--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,76 +1,14 @@
 <div id="home">
-    <section class="container slider-box slider-small">
-        <div class="row">
-            <div class="col-md-8">
-                <data-owl-carousel class="owl-carousel owl-theme owl-theme-slider" data-options="Home.owlOptionsSlider">
-                    <div owl-carousel-item="" ng-repeat="slide in Home.mainSlider" class="item">
-                        <div class="item" style="width: 100%;">
-                            <a post-link="{ link: {url: slide.link, target: '_self'} }">
-                                <div class="slider-img" style="background-image:url('{{ slide.featuredImage.url }}');"></div>
-                            </a>
-                        </div>
-                    </div>
-                </data-owl-carousel>
-            </div>
-            <div class="col-md-4">
-                <div class="row">
-                    <div class="col-md-12 no-pd-l" ng-repeat="item in Home.promoHome">
-                        <div class="card">
-                            <a href="{{item.link}}"><img src="{{ item.featuredImage.url }}" class="card-img-top" alt="{{ item.title }}"></a>
-                        </div>
-                    </div>
-                </div>
-                
-            </div>
-        </div>
-    </section>
-
-    <section class="section-two" ng-controller="ShoppingCtrl as Shop">
-        <div class="container">
-            <div class="title-middle-line">
-                <div class="text-content">
-                    <h3 class="font-type">Calzado Para Ella</h3>
-                </div>
-                <hr>
-            </div>
-            <div class="row">
-                <div class="col-sm-3 col-6" ng-repeat="product in Home.products">
-                    <ng-include src="'/templates/partials/box-product.html'"></ng-include>
+    <section class="slider-box">
+        <data-owl-carousel class="owl-carousel owl-theme owl-theme-slider" data-options="Home.owlOptionsSlider">
+            <div owl-carousel-item="" ng-repeat="slide in Home.mainSlider" class="item">
+                <div class="item" style="width: 100%;">
+                    <a post-link="{ link: {url: slide.link, target: '_self'} }">
+                        <div class="slider-img" style="background-image:url('{{ slide.featuredImage.url }}');"></div>
+                    </a>
                 </div>
             </div>
-        </div>
-    </section>
-
-    <section class="section-two" ng-controller="ShoppingCtrl as Shop">
-        <div class="container">
-            <div class="title-middle-line">
-                <div class="text-content">
-                    <h3 class="font-type">Calzado Para Él</h3>
-                </div>
-                <hr>
-            </div>
-            <div class="row">
-                <div class="col-sm-3 col-6" ng-repeat="product in Home.productsItem">
-                    <ng-include src="'/templates/partials/box-product.html'"></ng-include>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="section-two" ng-controller="ShoppingCtrl as Shop">
-        <div class="container">
-            <div class="title-middle-line">
-                <div class="text-content">
-                    <h3 class="font-type">Calzado Para Niño y Niña</h3>
-                </div>
-                <hr>
-            </div>
-            <div class="row">
-                <div class="col-sm-3 col-6" ng-repeat="product in Home.productsChildren">
-                    <ng-include src="'/templates/partials/box-product.html'"></ng-include>
-                </div>
-            </div>
-        </div>
+        </data-owl-carousel>
     </section>
 
     <div class="section-four">
@@ -86,6 +24,21 @@
             </div>
         </div>
     </div>
+
+    <section class="section-two" ng-controller="ShoppingCtrl as Shop">
+        <div class="container">
+            <div class="title-middle-line">
+                <div class="text-center">
+                    <h3 class="font-type">Diseña tu espacio</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3 col-6" ng-repeat="product in Home.products">
+                    <ng-include src="'/templates/partials/box-product.html'"></ng-include>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section class="section-three">
         <div class="container">
