--- a/app/templates/partials/block-ui.html
+++ b/app/templates/partials/block-ui.html
@@ -3,10 +3,16 @@
     <div class="block-ui-message" ng-class="$_blockUiMessageClass">
         <img width="220px" src="img/logo.png" alt="Moneek"/>
         <br>
-        <div class="spinner">
-            <div class="bounce1"></div>
-            <div class="bounce2"></div>
-            <div class="bounce3"></div>
-        </div>
+        <div class="sk-cube-grid">
+            <div class="sk-cube sk-cube1"></div>
+            <div class="sk-cube sk-cube2"></div>
+            <div class="sk-cube sk-cube3"></div>
+            <div class="sk-cube sk-cube4"></div>
+            <div class="sk-cube sk-cube5"></div>
+            <div class="sk-cube sk-cube6"></div>
+            <div class="sk-cube sk-cube7"></div>
+            <div class="sk-cube sk-cube8"></div>
+            <div class="sk-cube sk-cube9"></div>
+          </div>
     </div>
 </div>
