--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -1,81 +1,66 @@
-<div class="send-free-msj">
-    <div class="container">
-        <div class="text-center">
-            <p><strong>Envío gratis</strong> en compras mayores a $500 pesos.</p>
-        </div>
-    </div>
-</div>
 <div class="mobile-hidde">
-    <div class="first-row">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-3 col-md-2 col-sm-2 data-social-media">
-                    <ul class="navbar-nav navbar-expand-lg mobile-hidde">
-                        <li class="nav-item" ng-repeat="social in socialMedia">
-                            <a class="nav-link" href="{{ social.excerpt }}"><span
-                                ng-bind-html="social.content | trustHtml"></span></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-6 col-sm-4" ng-controller="GetQuerySearchCtrl as Search">
-                    <form name="search" role="search" class="input-search"
-                          ng-submit="Search.globalSearch('product')">
-                        <md-input-container md-no-float>
-                            <input id="validationServerUsername" placeholder="Buscar"
-                                   aria-describedby="inputGroupPrepend3" ng-model="Search.searchTerm" required>
-                            <md-icon class="fa fa-search" ng-click="Search.globalSearch('product')"></md-icon>
-                        </md-input-container>
-                    </form>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 mobile-hidde" ng-controller="AccessCtrl as Access">
-                    <ul class="navbar-nav navbar-expand-lg justify-content-end ">
-                        <li class="nav-item">
-                            <a href="contacto@calzalia.mx" class="nav-link">
-                               <i class="fa fa-envelope"></i> contacto@calzalia.mx
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <nav class="navbar navbar-expand-lg navbar-light nav-theme">
+    <nav class="navbar navbar-expand-lg navbar-light nav-theme navbar-fixed-top">
         <div class="container">
             <a ui-sref="home" class="navbar-brand">
-                <img src="img/logo.png" class="logo" alt="Lady Paola">
+                <img src="img/logo.png" class="logo" alt="Monbelyy - Ceramic Tiles">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="fa fa-bars"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
-                <ul class="navbar-nav justify-content-center">
-                    <li class="nav-item" ng-repeat="item in mainNavMenu">
-                        <a class="nav-link" href="{{ item.link }}" ng-click="nav.close()">{{ item.name }}</a>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+                <ul class="navbar-nav justify-content-center"> 
+                    <!--desk nav-->
+                    <li class="nav-item dropdown hover-dropdown hide-xs" ng-repeat="item in mainNavMenu">
+                        <a class="nav-link dropdown-toggle" href="{{ item.link }}" data-toggle="dropdown" ng-click="nav.close()" ng-if="item.children.length>0">{{ item.name }} <i class="fa fa-angle-down" aria-hidden="true"></i>                        </a>
+                        <a class="nav-link" href="{{ item.link }}" ng-click="nav.close()" ng-if="!item.children.length>0">{{ item.name }}</a>
+                        <div class="dropdown-menu" ng-if="item.children.length>0">
+                            <a ng-repeat="child in item.children" class="dropdown-item" href="{{ child.link }}">{{child.name}}</a>
+                        </div>  
+                    </li>
+                    <!--mobile nav-->
+                    <li class="nav-item dropdown hide-lg hide-md" ng-repeat="item in mainNavMenu">
+                        <a class="nav-link dropdown-toggle" href="{{ item.link }}" data-toggle="dropdown" ng-click="nav.close()" ng-if="item.children.length>0">{{ item.name }}</a>
+                        <a class="nav-link" href="{{ item.link }}" ng-click="nav.close()" ng-if="!item.children.length>0">{{ item.name }}</a>
+                        <div class="dropdown-menu" ng-if="item.children.length>0">
+                            <a ng-repeat="child in item.children" class="dropdown-item" href="{{ child.link }}">{{child.name}}</a>
+                        </div> 
                     </li>
                 </ul>
-                <ul class="navbar-nav navbar-expand-lg mobile-hidde" ng-controller="AccessCtrl as Access">
-                    <li class="nav-item">
-                        <a ui-sref="register({'action': 'login'})" class="nav-link"
-                           ng-if="!Access.isAuthenticated()">
-                            <i class="fa fa-user-circle"></i> Iniciar sesión
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a ng-if="Access.isAuthenticated()" class="nav-link" ui-sref="dashboard">
-                            <i class="fa fa-user-circle"></i> {{user.username}}
-                        </a>
-                    </li>
-    
-                    <li>
-                        <a ui-sref="shopcart" class="nav-link" ng-if="ecommerce"
-                           ng-controller="AccessCtrl as Access">
-                           <i class="fa fa-shopping-bag"></i> ({{ items.length }})
-                        </a>
-                    </li>
-                </ul>
-    
             </div>
+            <ul class="navbar-nav navbar-expand-lg mobile-hidde align-items-center" ng-controller="AccessCtrl as Access">
+                <li class="nav-item">
+                        <div class="search-bar" ng-controller="GetQuerySearchCtrl as Search">
+                            <form name="search" role="search" ng-submit="Search.globalSearch('product')">
+                                <input type="text" id="validationServerUsername" placeholder="Buscar"
+                                aria-describedby="inputGroupPrepend3" ng-model="Search.searchTerm" required></input>
+                                <div class="search-icon"></div>
+                            </form>
+                            
+                        </div>
+                    </li>
+
+                <li class="nav-item">
+                    <a ui-sref="register({'action': 'login'})" class="nav-link"
+                       ng-if="!Access.isAuthenticated()">
+                        <i class="fa fa-user-circle"></i> Iniciar sesión
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a ng-if="Access.isAuthenticated()" class="nav-link" ui-sref="dashboard">
+                        <i class="fa fa-user-circle"></i> {{user.username}}
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a ui-sref="shopcart" class="shopping-cart nav-link" ng-if="ecommerce"
+                        ng-controller="AccessCtrl as Access">
+                        <span class="qty-cart" ng-if="items.length>0">{{ items.length }}</span>
+                        <i class="ion-ios-cart"></i><span class="hidden-xs"></span>
+                    </a>
+
+                </li>
+            </ul>
         </div>
     </nav>
 </div>
@@ -101,25 +86,27 @@
             <ul class="navbar-nav navbar-expand-lg align-items-center" ng-controller="AccessCtrl as Access">
                 <li class="nav-item">
                     <a ui-sref="home" class="navbar-brand">
-                        <img src="img/logo.png" class="logo" alt="Lady Paola">
+                        <img src="img/logo.png" class="logo" alt="Monbelyy - Ceramic Tiles">
                     </a> 
                 </li>
                 <li class="nav-item"  ng-if="!Access.isAuthenticated()">
                     <a ui-sref="register({'action': 'login'})" class="nav-link">
-                        <i class="fa fa-user-circle"></i>
+                        <i class="fa fa-user-circle" style="font-size: 32px;"></i>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a ng-if="Access.isAuthenticated()" class="nav-link" ui-sref="dashboard">
-                        <i class="fa fa-user-circle"></i> {{user.username}}
+                <li class="nav-item" ng-if="Access.isAuthenticated()">
+                    <a  class="nav-link" ui-sref="dashboard">
+                        <i class="fa fa-user-circle" style="font-size: 22px;"></i> Mi cuenta
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a ui-sref="shopcart" class="nav-link" ng-if="ecommerce"
+                    <a ui-sref="shopcart" class="shopping-cart nav-link" ng-if="ecommerce" style="margin-top: -10px;"
                         ng-controller="AccessCtrl as Access">
-                        <i class="fa fa-shopping-bag"></i> ({{ items.length }})
+                        <span class="qty-cart" ng-if="items.length>0">{{ items.length }}</span>
+                        <i class="ion-ios-cart"></i><span class="hidden-xs"></span>
                     </a>
+
                 </li>
                 <li class="nav-item">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -130,8 +117,12 @@
             </ul>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item" ng-repeat="item in mainNavMenu">
-                        <a class="nav-link" href="{{ item.link }}" ng-click="nav.close()">{{ item.name }}</a>
+                    <li class="nav-item dropdown hide-lg hide-md" ng-repeat="item in mainNavMenu">
+                        <a class="nav-link dropdown-toggle" href="{{ item.link }}" data-toggle="dropdown" ng-click="nav.close()" ng-if="item.children.length>0">{{ item.name }} <i class="fa fa-angle-down" aria-hidden="true"></i></a>
+                        <a class="nav-link" href="{{ item.link }}" ng-click="nav.close()" ng-if="!item.children.length>0">{{ item.name }}</a>
+                        <div class="dropdown-menu" ng-if="item.children.length>0">
+                            <a ng-repeat="child in item.children" class="dropdown-item" href="{{ child.link }}">{{child.name}}</a>
+                        </div> 
                     </li>
                 </ul>
             </div>
