config for deploy

--- a/app/templates/partials/header.html
+++ b/app/templates/partials/header.html
@@ -48,7 +48,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark nav-theme">
     <div class="container">
         <a ui-sref="home" class="navbar-brand">
-            <img src="img/logo.png" class="logo" alt="calzalia.mx">
+            <img src="img/logo.png" class="logo" alt="Monbelyy.mx">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
