--- a/app/css/core/navs.styl
+++ b/app/css/core/navs.styl
@@ -214,7 +214,7 @@
     box-shadow 0 0 10px rgba(0,0,0,0.1989)
   .dropdown-menu:after
     position: absolute;
-    right: 50%;
+    left: 0;
     top: -8px;
     width: 0;
     height: 0;
