--- a/app/css/main.css
+++ b/app/css/main.css
@@ -250,7 +250,7 @@ audio:not([controls]),
 }
 .hover-dropdown .dropdown-menu:after {
   position: absolute;
-  right: 50%;
+  left: 0;
   top: -8px;
   width: 0;
   height: 0;
@@ -605,9 +605,6 @@ audio:not([controls]),
 }
 .unbordered {
   border-radius: 0;
-}
-.dropdown-menu {
-  top: 38px;
 }
 .box,
 .box-simple,
