--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-expand-lg navbar-light nav-theme navbar-fixed-top">
         <div class="container">
             <a ui-sref="home" class="navbar-brand">
-                <img src="img/logo.png" class="logo" alt="Monbelyy - Ceramic Tiles">
+                <img src="img/logo.png" class="logo" alt="Bolsas Artesanales Lady Paola">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -86,7 +86,7 @@
             <ul class="navbar-nav navbar-expand-lg align-items-center" ng-controller="AccessCtrl as Access">
                 <li class="nav-item">
                     <a ui-sref="home" class="navbar-brand">
-                        <img src="img/logo.png" class="logo" alt="Monbelyy - Ceramic Tiles">
+                        <img src="img/logo.png" class="logo" alt="Bolsas Artesanales Lady Paola">
                     </a> 
                 </li>
                 <li class="nav-item"  ng-if="!Access.isAuthenticated()">
