--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -189,8 +189,7 @@
   .box-container
     text-align center
     margin-bottom 15px
-    padding-top 25px
-    padding-bottom 20px 
+    padding 20px 
     margin-top 15px 
     border-top 1px solid #ddd
     p 
